o fixed typo of "replace" instead of "noreplace"

--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -79,7 +79,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man1/*
 %{_mandir}/man5/*
 %{_mandir}/man8/*
-%config(replace) /etc/rc.d/init.d/slurm
+%config(noreplace) /etc/rc.d/init.d/slurm
 %config(noreplace) /etc/slurm/slurm.conf
 
 %files devel
