--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -192,13 +192,20 @@ typedef struct job_descriptor {	/* For submit, allocate, and update requests */
 	uint32_t user_id;	/* set only if different from current UID, 
 				 * can only be explicitly set by user root */
 	char *work_dir;		/* pathname of working directory */
+	char *alloc_node;	/* node making resource allocation request
+				 * NOTE: Normally set by slurm_submit* or 
+				 * slurm_allocate* function */
+	uint32_t alloc_sid;	/* local sid making resource allocation request
+				 * NOTE: Normally set by slurm_submit* or 
+				 * slurm_allocate* function */
 } job_desc_msg_t;
 
 typedef struct job_info {
 	uint32_t job_id;	/* job ID */
 	char *name;		/* name of the job */
 	uint16_t batch_flag;	/* 1 if batch: queued job with script */
-	uint32_t batch_sid;	/* session id of running batch job */
+	uint32_t alloc_sid;	/* local sid making resource alloc */
+	char    *alloc_node;	/* local node making resource alloc */
 	uint32_t user_id;	/* user the job runs as */
 	uint16_t job_state;	/* state of the job, see enum job_states */
 	uint32_t time_limit;	/* maximum run time in minutes or INFINITE */
