o Reorganize slurmd job management functionality so    that job/job step session leader runs as owner of job    and not root.
   Split "session manger" code from mgr.c (which runs as root)
   into smgr.c (most session manager code runs as user)

 o reorganize interconnect functions (see interconnect.h) to
   fit new dual-process model for slurmd.

 o add pipe to job structure for communication between slurmd
   job manager and session manager.

 o add "mpid" field to shared memory for job steps and
   shm_update_step_mpid() to update this information.

 o add ulimits.[ch] to support  setting user limits for jobs based
   off SLURM_RLIMIT* env vars.

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -27,6 +27,7 @@ common_sources = 	        \
 	slurmd.c slurmd.h       \
 	req.c req.h		\
 	mgr.c mgr.h		\
+	smgr.c smgr.h		\
 	get_mach_stat.c         \
 	get_mach_stat.h		\
 	read_proc.c 	        \
@@ -35,6 +36,7 @@ common_sources = 	        \
 	semaphore.c semaphore.h	\
 	shm.c shm.h		\
 	fname.c fname.h		\
+	ulimits.c ulimits.h     \
 	setenvpf.c setenvpf.h   \
 	interconnect.h
 
