--- a/trunk/src/plugins/auth/Makefile.am
+++ b/trunk/src/plugins/auth/Makefile.am
@@ -8,7 +8,14 @@ PLUGIN_FLAGS = -module -avoid-version -no-undefined
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 
 # Add your plugin to this line, following the naming conventions.
-pkglib_LTLIBRARIES = auth_none.la auth_authd.la
+if WITH_AUTHD
+AUTHD = auth_authd.la
+endif
+if WITH_MUNGE
+MUNGE = auth_munge.la
+endif
+
+pkglib_LTLIBRARIES = auth_none.la $(AUTHD) $(MUNGE)
 
 # Null authentication plugin.
 auth_none_la_SOURCES = auth_none.c
@@ -19,4 +26,10 @@ auth_none_la_LIBADD = $(top_builddir)/src/api/libslurm.la
 auth_authd_la_SOURCES = auth_authd.c
 auth_authd_la_LDFLAGS = $(PLUGIN_FLAGS) 
 auth_authd_la_LIBADD = $(top_builddir)/src/api/libslurm.la -lauth 
+
+# Munge authentication plugin
+auth_munge_la_SOURCES = auth_munge.c
+auth_munge_la_LDFLAGS = $(PLUGIN_FLAGS) 
+auth_munge_la_LIBADD = $(top_builddir)/src/api/libslurm.la -lmunge 
+
 
