--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -25,8 +25,8 @@ Requires: slurm
 # XXX: How to conditionally build these?
 #
 %package auth-none
-Summary SLURM auth NULL implementation (no authentication)
-Group System Environment/Base
+Summary: SLURM auth NULL implementation (no authentication)
+Group: System Environment/Base
 Requires: slurm
 
 %package auth-authd
