Add MinNodes support to scontrol partition update command. Add MinNodes partition configuration option support. Add min_nodes to partition data structures, save/restart, dump, print, etc.

--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -303,6 +303,7 @@ typedef struct partition_info {
 	char *name;		/* name of the partition */
 	uint32_t max_time;	/* minutes or INFINITE */
 	uint32_t max_nodes;	/* per job or INFINITE */
+	uint32_t min_nodes;	/* per job */
 	uint32_t total_nodes;	/* total number of nodes in the partition */
 	uint32_t total_cpus;	/* total number of cpus in the partition */
 	uint16_t default_part;	/* 1 if this is default partition */
