Modify Makefile for jsspp bibliography. Minor updates to report.tex and project.bib. Continued development of jsspp.tex.

--- a/trunk/doc/pubdesign/Makefile
+++ b/trunk/doc/pubdesign/Makefile
@@ -43,6 +43,9 @@ all: $(JSSPP).ps $(REPORT).ps
 
 $(JSSPP).dvi: $(TEX) $(FIGS) $(PLOTS) $(BIB)
 	latex $(JSSPP)
+	bibtex $(JSSPP)
+	latex $(JSSPP)
+	latex $(JSSPP)
 
 $(REPORT).dvi: $(TEX) $(FIGS) $(PLOTS) $(BIB)
 	rm -f *.log *.aux *.blg *.bbl
