--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -20,6 +20,7 @@ srun_SOURCES = srun.c opt.c env.c opt.h env.h job.c job.h net.c net.h \
 
 srun_LDADD = $(top_builddir)/src/common/libcommon.la   \
              $(top_builddir)/src/common/libhostlist.la \
+             $(top_builddir)/src/common/libeio.la      \
 	     $(top_builddir)/src/api/libslurm.la       \
 	     $(POPT_LIBS) 
 
